Update - plus one program and plus one additional

--- a/index.html
+++ b/index.html
@@ -208,6 +208,21 @@
     <h2>ADDITIONAL EXPERIENCE</h2>
 
     <div class="row">
+      
+       <div class="column2">
+        <p class="additional">
+          <em>January - February 2022</a></em><br>
+          Skopje, N. Macedonia <br>
+      </div>
+      <div class="column3">
+        <p> Participation in international educational 
+          <b><a href="image/SBD.jpg" target="_blank">
+              seminars - "Sustainable Building Design", </a></b>
+          organized by <a href="https://www.komoraoai.mk/#" target="_blank">the Association of Certified Architects and Certified Engineers.
+        </p>
+      </div>
+    </div>
+       
       <div class="column2">
         <p class="additional">
           <em>November- December 2021</a></em><br>
@@ -447,6 +462,7 @@
           Allplan<br>
           SketchUP<br>
           Lumion<br>
+          Enscape<br>
           3ds Max + V-Ray<br>
       </div>
 
