--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@
     <h2>ADDITIONAL EXPERIENCE</h2>
 
     <div class="row">
-      
        <div class="column2">
         <p class="additional">
           <em>January - February 2022</a></em><br>
@@ -223,6 +222,7 @@
       </div>
     </div>
        
+     <div class="row">
       <div class="column2">
         <p class="additional">
           <em>November- December 2021</a></em><br>
